crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__reports_unknown_character.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
val x = 1 | 2

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    PropertyDeclaration
      ModifierList
      ModifierList
      ValKw "val" @ 0..3 trailing=[Whitespace " "]
      Name
        Identifier "x" @ 4..5 trailing=[Whitespace " "]
      PropertyInitializer
        Assign "=" @ 6..7 trailing=[Whitespace " "]
        LiteralExpression
          IntegerLiteral "1" @ 8..9 trailing=[Whitespace " "]
        BogusExpression
          Unknown "|" @ 10..11 trailing=[Whitespace " "]
        BogusExpression
          IntegerLiteral "2" @ 12..13
      PropertyBodyMemberList
  Eof "" @ 14..14 leading=[Newline "\n"]

diagnostics:
  code=kotlin.lex.unknown_character severity=Error stage=Lexer range=10..11 message="unknown character"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=10..11 message="unexpected token in expression"
  code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=12..13 message="unexpected token in expression"

diagnostics:
code=kotlin.lex.unknown_character severity=Error stage=Lexer range=Some(TextRange { start: TextSize(10), end: TextSize(11) }) message=unknown character
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(10), end: TextSize(11) }) message=unexpected token in expression
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(12), end: TextSize(13) }) message=unexpected token in expression
