crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__reports_unterminated_line_string_at_newline.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
"abc
val x = 1

syntax:
syntax:
KotlinFile
  AnnotationList
  KotlinFileItemList
    Statement
      ExpressionStatement
        StringTemplateExpression
          StringTemplateEntryList
            StringTemplateEntry
              OpenQuote "\"" @ 0..1
            StringTemplateEntry
              RegularStringPart "abc" @ 1..4
            StringTemplateEntry
              DanglingNewline "" @ 4..4
            StringTemplateEntry
              ValKw "val" @ 5..8 leading=[Newline "\n"] trailing=[Whitespace " "]
            StringTemplateEntry
              Identifier "x" @ 9..10 trailing=[Whitespace " "]
            StringTemplateEntry
              Assign "=" @ 11..12 trailing=[Whitespace " "]
            StringTemplateEntry
              IntegerLiteral "1" @ 13..14
      TerminatorList
  Eof "" @ 15..15 leading=[Newline "\n"]

diagnostics:
  code=kotlin.lex.unterminated_string_literal severity=Error stage=Lexer range=0..4 message="unterminated string literal"

diagnostics:
code=kotlin.lex.unterminated_string_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(4) }) message=unterminated string literal
