crates/jolt_kotlin_syntax/tests/snapshots/corpus__syntax__lexer__reports_unterminated_raw_string.snap
---
source: crates/jolt_kotlin_syntax/tests/corpus.rs
expression: snapshot
---
input:
"""abc

syntax:
syntax:
KotlinFile
  AnnotationList
  ImportDirectiveList
  KotlinFileItemList
    Statement
      ExpressionStatement
        StringTemplateExpression
          StringTemplateEntryList
            StringTemplateEntry
              OpenQuote "\"\"\"" @ 0..3
            StringTemplateEntry
              RegularStringPart "abc" @ 3..6
            StringTemplateEntry
              RegularStringPart "\n" @ 6..7
      TerminatorList
  Eof "" @ 7..7

diagnostics:
  code=kotlin.lex.unterminated_raw_string_literal severity=Error stage=Lexer range=0..7 message="unterminated raw string literal"

diagnostics:
code=kotlin.lex.unterminated_raw_string_literal severity=Error stage=Lexer range=Some(TextRange { start: TextSize(0), end: TextSize(7) }) message=unterminated raw string literal
